examples: clocksync: added gPTP config

--- a/examples/ethernet/clocksynchronization/omnetpp.ini
+++ b/examples/ethernet/clocksynchronization/omnetpp.ini
@@ -13,7 +13,7 @@ description = "Using periodic gating mechanism with or without local clocks and 
 *.switch2.macTable.addressTableFile = "switch2.txt"
 
 # source applications
-*.source*.numApps = 1
+*.source*.numApps = 0
 *.source*.app[*].typename = "UdpApp"
 *.source*.app[0].source.packetLength = 1kB
 *.source*.app[0].source.productionInterval = 20us
@@ -27,7 +27,7 @@ description = "Using periodic gating mechanism with or without local clocks and 
 *.source2.app[0].source.packetNameFormat = "source2-%c"
 
 # sink applications
-*.sink*.numApps = 1
+*.sink*.numApps = 0
 *.sink*.app[*].typename = "UdpSink"
 *.sink*.app[0].localPort = 1000
 
@@ -76,4 +76,27 @@ extends = UnsynchronizedClocks
 
 [Config SynchronizedClocksByGPTP]
 description = "Synchronized local clocks using gPTP"
+
+*.switch1.clock.oscillator.driftRate = 300ppm
+
+*.source*.tableGPTP.typename = "TableGPTP"
+*.source*.clock.typename = "SettableClock"
+*.source*.eth[*].measurementLayer.typename = "EtherGPTP"
+*.source*.eth[*].measurementLayer.withFcs = false
+*.switch*.tableGPTP.typename = "TableGPTP"
+*.switch*.clock.typename = "SettableClock"
+*.switch*.eth[*].measurementLayer.typename = "EtherGPTP"
+*.switch*.eth[*].measurementLayer.withFcs = false
+
+*.switch1.tableGPTP.gPtpNodeType = 11  # gPTP Master
+*.switch1.eth[*].measurementLayer.portType = 2
+
+*.switch2.tableGPTP.gPtpNodeType = 13  # gPTP Slave
+*.switch2.eth[0].measurementLayer.portType = 1
+
+*.source*.tableGPTP.gPtpNodeType = 13  # gPTP Slave
+*.source*.eth[0].measurementLayer.portType = 1
+
+*.*.*.measurementLayer.syncInterval = 0.001s
+*.*.*.measurementLayer.pdelayInterval = 0.01s
 
