examples: follow 'gPTP: using enum GPtpPortType, GPtpNodeType strings in NED parameters'

--- a/examples/ethernet/clocksynchronization/omnetpp.ini
+++ b/examples/ethernet/clocksynchronization/omnetpp.ini
@@ -88,14 +88,14 @@ description = "Synchronized local clocks using gPTP"
 *.switch*.eth[*].measurementLayer.typename = "EtherGPTP"
 *.switch*.eth[*].measurementLayer.withFcs = false
 
-*.switch1.tableGPTP.gPtpNodeType = 11  # gPTP Master
-*.switch1.eth[*].measurementLayer.portType = 2
+*.switch1.tableGPTP.gPtpNodeType = "MASTER_NODE"
+*.switch1.eth[*].measurementLayer.portType = "MASTER_PORT"
 
-*.switch2.tableGPTP.gPtpNodeType = 13  # gPTP Slave
-*.switch2.eth[0].measurementLayer.portType = 1
+*.switch2.tableGPTP.gPtpNodeType = "SLAVE_NODE"
+*.switch2.eth[0].measurementLayer.portType = "SLAVE_PORT"
 
-*.source*.tableGPTP.gPtpNodeType = 13  # gPTP Slave
-*.source*.eth[0].measurementLayer.portType = 1
+*.source*.tableGPTP.gPtpNodeType = "SLAVE_NODE"
+*.source*.eth[0].measurementLayer.portType = "SLAVE_PORT"
 
 *.*.*.measurementLayer.syncInterval = 0.001s
 *.*.*.measurementLayer.pdelayInterval = 0.01s
