--- a/examples/ieee8021as/omnetpp.ini
+++ b/examples/ieee8021as/omnetpp.ini
@@ -34,21 +34,21 @@ network = NetworkWithCrossTraffic
                                 <interface hosts='standardHost11' names='eth0' address='10.0.0.14'/> \
                              </config>")
 
-*.gPtpMaster.eth[0].etherGPTP.portType = 2
-*.gPtpSlave.eth[0].etherGPTP.portType = 1
+*.gPtpMaster.eth[0].etherGPTP.portType = "MASTER_PORT"
+*.gPtpSlave.eth[0].etherGPTP.portType = "SLAVE_PORT"
 
-*.gPtpBridge0.eth[0].etherGPTP.portType = 1
-*.gPtpBridge0.eth[3].etherGPTP.portType = 2 
-*.gPtpBridge1.eth[0].etherGPTP.portType = 1
-*.gPtpBridge1.eth[3].etherGPTP.portType = 2 
-*.gPtpBridge2.eth[0].etherGPTP.portType = 1
-*.gPtpBridge2.eth[3].etherGPTP.portType = 2 
-*.gPtpBridge3.eth[0].etherGPTP.portType = 1
-*.gPtpBridge3.eth[3].etherGPTP.portType = 2 
-*.gPtpBridge4.eth[0].etherGPTP.portType = 1
-*.gPtpBridge4.eth[3].etherGPTP.portType = 2 
-*.gPtpBridge5.eth[0].etherGPTP.portType = 1
-*.gPtpBridge5.eth[3].etherGPTP.portType = 2 
+*.gPtpBridge0.eth[0].etherGPTP.portType = "SLAVE_PORT"
+*.gPtpBridge0.eth[3].etherGPTP.portType = "MASTER_PORT" 
+*.gPtpBridge1.eth[0].etherGPTP.portType = "SLAVE_PORT"
+*.gPtpBridge1.eth[3].etherGPTP.portType = "MASTER_PORT"
+*.gPtpBridge2.eth[0].etherGPTP.portType = "SLAVE_PORT"
+*.gPtpBridge2.eth[3].etherGPTP.portType = "MASTER_PORT"
+*.gPtpBridge3.eth[0].etherGPTP.portType = "SLAVE_PORT"
+*.gPtpBridge3.eth[3].etherGPTP.portType = "MASTER_PORT"
+*.gPtpBridge4.eth[0].etherGPTP.portType = "SLAVE_PORT"
+*.gPtpBridge4.eth[3].etherGPTP.portType = "MASTER_PORT"
+*.gPtpBridge5.eth[0].etherGPTP.portType = "SLAVE_PORT"
+*.gPtpBridge5.eth[3].etherGPTP.portType = "MASTER_PORT"
 
 
 [Config Network_with_cross_traffic]
@@ -108,29 +108,29 @@ extends = Network
 
 network = NetworkDaisyChain
 
-*.gPtpMaster.eth[0].etherGPTP.portType = 2
-*.gPtpSlave0.eth[0].etherGPTP.portType = 1
-*.gPtpSlave1.eth[0].etherGPTP.portType = 1
-*.gPtpSlave2.eth[0].etherGPTP.portType = 1
-*.gPtpSlave3.eth[0].etherGPTP.portType = 1
-*.gPtpSlave4.eth[0].etherGPTP.portType = 1
-*.gPtpSlave5.eth[0].etherGPTP.portType = 1
-*.gPtpSlave6.eth[0].etherGPTP.portType = 1
-*.gPtpSlave7.eth[0].etherGPTP.portType = 1
+*.gPtpMaster.eth[0].etherGPTP.portType = "MASTER_PORT"
+*.gPtpSlave0.eth[0].etherGPTP.portType = "SLAVE_PORT"
+*.gPtpSlave1.eth[0].etherGPTP.portType = "SLAVE_PORT"
+*.gPtpSlave2.eth[0].etherGPTP.portType = "SLAVE_PORT"
+*.gPtpSlave3.eth[0].etherGPTP.portType = "SLAVE_PORT"
+*.gPtpSlave4.eth[0].etherGPTP.portType = "SLAVE_PORT"
+*.gPtpSlave5.eth[0].etherGPTP.portType = "SLAVE_PORT"
+*.gPtpSlave6.eth[0].etherGPTP.portType = "SLAVE_PORT"
+*.gPtpSlave7.eth[0].etherGPTP.portType = "SLAVE_PORT"
 
-*.gPtpBridge0.eth[0].etherGPTP.portType = 1
-*.gPtpBridge0.eth[1].etherGPTP.portType = 2 
-*.gPtpBridge0.eth[2].etherGPTP.portType = 2 
-*.gPtpBridge0.eth[3].etherGPTP.portType = 2 
-*.gPtpBridge0.eth[4].etherGPTP.portType = 2 
-*.gPtpBridge1.eth[0].etherGPTP.portType = 1
-*.gPtpBridge1.eth[1].etherGPTP.portType = 2 
-*.gPtpBridge1.eth[2].etherGPTP.portType = 2
-*.gPtpBridge1.eth[3].etherGPTP.portType = 2
-*.gPtpBridge1.eth[4].etherGPTP.portType = 2
-*.gPtpBridge2.eth[0].etherGPTP.portType = 1
-*.gPtpBridge2.eth[1].etherGPTP.portType = 2
-*.gPtpBridge2.eth[2].etherGPTP.portType = 2
+*.gPtpBridge0.eth[0].etherGPTP.portType = "SLAVE_PORT"
+*.gPtpBridge0.eth[1].etherGPTP.portType = "MASTER_PORT"
+*.gPtpBridge0.eth[2].etherGPTP.portType = "MASTER_PORT"
+*.gPtpBridge0.eth[3].etherGPTP.portType = "MASTER_PORT"
+*.gPtpBridge0.eth[4].etherGPTP.portType = "MASTER_PORT"
+*.gPtpBridge1.eth[0].etherGPTP.portType = "SLAVE_PORT"
+*.gPtpBridge1.eth[1].etherGPTP.portType = "MASTER_PORT"
+*.gPtpBridge1.eth[2].etherGPTP.portType = "MASTER_PORT"
+*.gPtpBridge1.eth[3].etherGPTP.portType = "MASTER_PORT"
+*.gPtpBridge1.eth[4].etherGPTP.portType = "MASTER_PORT"
+*.gPtpBridge2.eth[0].etherGPTP.portType = "SLAVE_PORT"
+*.gPtpBridge2.eth[1].etherGPTP.portType = "MASTER_PORT"
+*.gPtpBridge2.eth[2].etherGPTP.portType = "MASTER_PORT"
 
 *.gPtpMaster.clockGPTP.clockDrift = 0
 *.gPtpBridge0.clockGPTP.clockDrift = 30
