example: ClockSynchronization: re-enable applications

--- a/examples/ethernet/clocksynchronization/omnetpp.ini
+++ b/examples/ethernet/clocksynchronization/omnetpp.ini
@@ -13,7 +13,7 @@ description = "Using periodic gating mechanism with or without local clocks and 
 *.switch2.macTable.addressTableFile = "switch2.txt"
 
 # source applications
-*.source*.numApps = 0
+*.source*.numApps = 1
 *.source*.app[*].typename = "UdpApp"
 *.source*.app[0].source.packetLength = 1kB
 *.source*.app[0].source.productionInterval = 20us
@@ -27,7 +27,7 @@ description = "Using periodic gating mechanism with or without local clocks and 
 *.source2.app[0].source.packetNameFormat = "source2-%c"
 
 # sink applications
-*.sink*.numApps = 0
+*.sink*.numApps = 1
 *.sink*.app[*].typename = "UdpSink"
 *.sink*.app[0].localPort = 1000
 
@@ -97,4 +97,6 @@ description = "Synchronized local clocks using gPTP"
 *.source*.tableGPTP.gPtpNodeType = "SLAVE_NODE"
 *.source*.eth[0].measurementLayer.portType = "SLAVE_PORT"
 
+*.*.*.measurementLayer.syncInterval = 0.125s
+*.*.*.measurementLayer.pdelayInterval = 1s
 
