examples: follow: 'ieee802.1as: rename files'

--- a/examples/ethernet/clocksynchronization/omnetpp.ini
+++ b/examples/ethernet/clocksynchronization/omnetpp.ini
@@ -79,22 +79,22 @@ description = "Synchronized local clocks using gPTP"
 
 *.switch1.clock.oscillator.driftRate = 300ppm
 
-*.source*.tableGPTP.typename = "TableGPTP"
+*.source*.tableGPtp.typename = "TableGPtp"
 *.source*.clock.typename = "SettableClock"
-*.source*.eth[*].measurementLayer.typename = "EtherGPTP"
+*.source*.eth[*].measurementLayer.typename = "EtherGPtp"
 *.source*.eth[*].measurementLayer.withFcs = false
-*.switch*.tableGPTP.typename = "TableGPTP"
+*.switch*.tableGPtp.typename = "TableGPtp"
 *.switch*.clock.typename = "SettableClock"
-*.switch*.eth[*].measurementLayer.typename = "EtherGPTP"
+*.switch*.eth[*].measurementLayer.typename = "EtherGPtp"
 *.switch*.eth[*].measurementLayer.withFcs = false
 
-*.switch1.tableGPTP.gPtpNodeType = "MASTER_NODE"
+*.switch1.tableGPtp.gPtpNodeType = "MASTER_NODE"
 *.switch1.eth[*].measurementLayer.portType = "MASTER_PORT"
 
-*.switch2.tableGPTP.gPtpNodeType = "SLAVE_NODE"
+*.switch2.tableGPtp.gPtpNodeType = "SLAVE_NODE"
 *.switch2.eth[0].measurementLayer.portType = "SLAVE_PORT"
 
-*.source*.tableGPTP.gPtpNodeType = "SLAVE_NODE"
+*.source*.tableGPtp.gPtpNodeType = "SLAVE_NODE"
 *.source*.eth[0].measurementLayer.portType = "SLAVE_PORT"
 
 *.*.*.measurementLayer.syncInterval = 0.125s
