--- a/examples/ieee8021as/omnetpp.ini
+++ b/examples/ieee8021as/omnetpp.ini
@@ -34,22 +34,30 @@ network = NetworkWithCrossTraffic
                                 <interface hosts='standardHost11' names='eth0' address='10.0.0.14'/> \
                              </config>")
 
-*.gPtpMaster.eth[0].etherGPTP.portType = "MASTER_PORT"
-*.gPtpSlave.eth[0].etherGPTP.portType = "SLAVE_PORT"
+*.gPtpMaster.eth[0].etherGPtp.portType = "MASTER_PORT"
+*.gPtpSlave.eth[0].etherGPtp.portType = "SLAVE_PORT"
 
-*.gPtpBridge0.eth[0].etherGPTP.portType = "SLAVE_PORT"
-*.gPtpBridge0.eth[3].etherGPTP.portType = "MASTER_PORT" 
-*.gPtpBridge1.eth[0].etherGPTP.portType = "SLAVE_PORT"
-*.gPtpBridge1.eth[3].etherGPTP.portType = "MASTER_PORT"
-*.gPtpBridge2.eth[0].etherGPTP.portType = "SLAVE_PORT"
-*.gPtpBridge2.eth[3].etherGPTP.portType = "MASTER_PORT"
-*.gPtpBridge3.eth[0].etherGPTP.portType = "SLAVE_PORT"
-*.gPtpBridge3.eth[3].etherGPTP.portType = "MASTER_PORT"
-*.gPtpBridge4.eth[0].etherGPTP.portType = "SLAVE_PORT"
-*.gPtpBridge4.eth[3].etherGPTP.portType = "MASTER_PORT"
-*.gPtpBridge5.eth[0].etherGPTP.portType = "SLAVE_PORT"
-*.gPtpBridge5.eth[3].etherGPTP.portType = "MASTER_PORT"
+*.gPtpBridge0.eth[0].etherGPtp.portType = "SLAVE_PORT"
+*.gPtpBridge0.eth[3].etherGPtp.portType = "MASTER_PORT" 
+*.gPtpBridge1.eth[0].etherGPtp.portType = "SLAVE_PORT"
+*.gPtpBridge1.eth[3].etherGPtp.portType = "MASTER_PORT"
+*.gPtpBridge2.eth[0].etherGPtp.portType = "SLAVE_PORT"
+*.gPtpBridge2.eth[3].etherGPtp.portType = "MASTER_PORT"
+*.gPtpBridge3.eth[0].etherGPtp.portType = "SLAVE_PORT"
+*.gPtpBridge3.eth[3].etherGPtp.portType = "MASTER_PORT"
+*.gPtpBridge4.eth[0].etherGPtp.portType = "SLAVE_PORT"
+*.gPtpBridge4.eth[3].etherGPtp.portType = "MASTER_PORT"
+*.gPtpBridge5.eth[0].etherGPtp.portType = "SLAVE_PORT"
+*.gPtpBridge5.eth[3].etherGPtp.portType = "MASTER_PORT"
 
+*.gPtpMaster.clock.oscillator.driftRate = 100ppm
+*.gPtpBridge0.clock.oscillator.driftRate = 30ppm
+*.gPtpBridge1.clock.oscillator.driftRate = -15ppm
+*.gPtpBridge2.clock.oscillator.driftRate = 20ppm
+*.gPtpBridge3.clock.oscillator.driftRate = -100ppm
+*.gPtpBridge4.clock.oscillator.driftRate = 40ppm
+*.gPtpBridge5.clock.oscillator.driftRate = -35ppm
+*.gPtpSlave.clock.oscillator.driftRate = 50ppm
 
 [Config Network_with_cross_traffic]
 extends = Network
@@ -108,42 +116,42 @@ extends = Network
 
 network = NetworkDaisyChain
 
-*.gPtpMaster.eth[0].etherGPTP.portType = "MASTER_PORT"
-*.gPtpSlave0.eth[0].etherGPTP.portType = "SLAVE_PORT"
-*.gPtpSlave1.eth[0].etherGPTP.portType = "SLAVE_PORT"
-*.gPtpSlave2.eth[0].etherGPTP.portType = "SLAVE_PORT"
-*.gPtpSlave3.eth[0].etherGPTP.portType = "SLAVE_PORT"
-*.gPtpSlave4.eth[0].etherGPTP.portType = "SLAVE_PORT"
-*.gPtpSlave5.eth[0].etherGPTP.portType = "SLAVE_PORT"
-*.gPtpSlave6.eth[0].etherGPTP.portType = "SLAVE_PORT"
-*.gPtpSlave7.eth[0].etherGPTP.portType = "SLAVE_PORT"
+*.gPtpMaster.eth[0].etherGPtp.portType = "MASTER_PORT"
+*.gPtpSlave0.eth[0].etherGPtp.portType = "SLAVE_PORT"
+*.gPtpSlave1.eth[0].etherGPtp.portType = "SLAVE_PORT"
+*.gPtpSlave2.eth[0].etherGPtp.portType = "SLAVE_PORT"
+*.gPtpSlave3.eth[0].etherGPtp.portType = "SLAVE_PORT"
+*.gPtpSlave4.eth[0].etherGPtp.portType = "SLAVE_PORT"
+*.gPtpSlave5.eth[0].etherGPtp.portType = "SLAVE_PORT"
+*.gPtpSlave6.eth[0].etherGPtp.portType = "SLAVE_PORT"
+*.gPtpSlave7.eth[0].etherGPtp.portType = "SLAVE_PORT"
 
-*.gPtpBridge0.eth[0].etherGPTP.portType = "SLAVE_PORT"
-*.gPtpBridge0.eth[1].etherGPTP.portType = "MASTER_PORT"
-*.gPtpBridge0.eth[2].etherGPTP.portType = "MASTER_PORT"
-*.gPtpBridge0.eth[3].etherGPTP.portType = "MASTER_PORT"
-*.gPtpBridge0.eth[4].etherGPTP.portType = "MASTER_PORT"
-*.gPtpBridge1.eth[0].etherGPTP.portType = "SLAVE_PORT"
-*.gPtpBridge1.eth[1].etherGPTP.portType = "MASTER_PORT"
-*.gPtpBridge1.eth[2].etherGPTP.portType = "MASTER_PORT"
-*.gPtpBridge1.eth[3].etherGPTP.portType = "MASTER_PORT"
-*.gPtpBridge1.eth[4].etherGPTP.portType = "MASTER_PORT"
-*.gPtpBridge2.eth[0].etherGPTP.portType = "SLAVE_PORT"
-*.gPtpBridge2.eth[1].etherGPTP.portType = "MASTER_PORT"
-*.gPtpBridge2.eth[2].etherGPTP.portType = "MASTER_PORT"
+*.gPtpBridge0.eth[0].etherGPtp.portType = "SLAVE_PORT"
+*.gPtpBridge0.eth[1].etherGPtp.portType = "MASTER_PORT"
+*.gPtpBridge0.eth[2].etherGPtp.portType = "MASTER_PORT"
+*.gPtpBridge0.eth[3].etherGPtp.portType = "MASTER_PORT"
+*.gPtpBridge0.eth[4].etherGPtp.portType = "MASTER_PORT"
+*.gPtpBridge1.eth[0].etherGPtp.portType = "SLAVE_PORT"
+*.gPtpBridge1.eth[1].etherGPtp.portType = "MASTER_PORT"
+*.gPtpBridge1.eth[2].etherGPtp.portType = "MASTER_PORT"
+*.gPtpBridge1.eth[3].etherGPtp.portType = "MASTER_PORT"
+*.gPtpBridge1.eth[4].etherGPtp.portType = "MASTER_PORT"
+*.gPtpBridge2.eth[0].etherGPtp.portType = "SLAVE_PORT"
+*.gPtpBridge2.eth[1].etherGPtp.portType = "MASTER_PORT"
+*.gPtpBridge2.eth[2].etherGPtp.portType = "MASTER_PORT"
 
-*.gPtpMaster.clockGPTP.clockDrift = 0
-*.gPtpBridge0.clockGPTP.clockDrift = 30
-*.gPtpSlave0.clockGPTP.clockDrift = -50
-*.gPtpSlave1.clockGPTP.clockDrift = 10
-*.gPtpSlave7.clockGPTP.clockDrift = -35
-*.gPtpBridge1.clockGPTP.clockDrift = -15
-*.gPtpSlave2.clockGPTP.clockDrift = 50
-*.gPtpSlave5.clockGPTP.clockDrift = 40
-*.gPtpSlave6.clockGPTP.clockDrift = -15
-*.gPtpBridge2.clockGPTP.clockDrift = 20
-*.gPtpSlave3.clockGPTP.clockDrift = -5
-*.gPtpSlave4.clockGPTP.clockDrift = -50
+*.gPtpMaster.clock.oscillator.driftRate = 0ppm
+*.gPtpBridge0.clock.oscillator.driftRate = 30ppm
+*.gPtpSlave0.clock.oscillator.driftRate = -50ppm
+*.gPtpSlave1.clock.oscillator.driftRate = 10ppm
+*.gPtpSlave7.clock.oscillator.driftRate = -35ppm
+*.gPtpBridge1.clock.oscillator.driftRate = -15ppm
+*.gPtpSlave2.clock.oscillator.driftRate = 50ppm
+*.gPtpSlave5.clock.oscillator.driftRate = 40ppm
+*.gPtpSlave6.clock.oscillator.driftRate = -15ppm
+*.gPtpBridge2.clock.oscillator.driftRate = 20ppm
+*.gPtpSlave3.clock.oscillator.driftRate = -5ppm
+*.gPtpSlave4.clock.oscillator.driftRate = -50ppm
 
 [Config Network_fp]
 extends = Network
