All: Followed recent PeriodicGate parameter change.

--- a/examples/ethernet/clocksynchronization/omnetpp.ini
+++ b/examples/ethernet/clocksynchronization/omnetpp.ini
@@ -40,7 +40,7 @@ description = "Using periodic gating mechanism with or without local clocks and 
 *.switch1.eth[0].macLayer.queue.classifier.packetDataFilters = "*;*"
 *.switch1.eth[0].macLayer.queue.queue[*].typename = "DropTailQueue"
 *.switch1.eth[0].macLayer.queue.gate[*].initiallyOpen = false
-*.switch1.eth[0].macLayer.queue.gate[*].durations = "10us 10us"
+*.switch1.eth[0].macLayer.queue.gate[*].durations = [10us, 10us]
 *.switch1.eth[0].macLayer.queue.gate[1].offset = 10us
 
 [Config SynchronizedBySimulationTime]
