--- a/examples/ethernet/gatepreemption/omnetpp.ini
+++ b/examples/ethernet/gatepreemption/omnetpp.ini
@@ -42,5 +42,5 @@ measurement-label = ${highTsOperation}
 *.host*.eth[0].macLayer.queue.numQueues = 1
 *.host*.eth[0].macLayer.queue.queue[*].typename = "DropTailQueue"
 *.host*.eth[0].macLayer.queue.gate[*].initiallyOpen = true
-*.host*.eth[0].macLayer.queue.gate[*].durations = "10us 10us" # Let a max stream of 125B pass through the gate(s)
+*.host*.eth[0].macLayer.queue.gate[*].durations = [10us, 10us] # Let a max stream of 125B pass through the gate(s)
 *.host*.eth[0].phyLayer.typename = "EthernetPreemptingPhyLayer"
