--- a/examples/ethernet/interface/omnetpp.ini
+++ b/examples/ethernet/interface/omnetpp.ini
@@ -90,7 +90,7 @@ extends = Basic
 *.host*.eth[0].macLayer.queue.numQueues = 8
 *.host*.eth[0].macLayer.queue.queue[*].typename = "DropTailQueue"
 *.host*.eth[0].macLayer.queue.gate[*].initiallyOpen = true
-*.host*.eth[0].macLayer.queue.gate[*].durations = "7ms 1ms"
+*.host*.eth[0].macLayer.queue.gate[*].durations = [7ms, 1ms]
 *.host*.eth[0].macLayer.queue.gate[0].offset = 0ms
 *.host*.eth[0].macLayer.queue.gate[1].offset = 1ms
 *.host*.eth[0].macLayer.queue.gate[2].offset = 2ms
@@ -124,7 +124,7 @@ extends = PreemptionWithPriorityQueueing
 *.host*.eth[0].macLayer.expressMacLayer.queue.numQueues = 8
 *.host*.eth[0].macLayer.expressMacLayer.queue.queue[*].typename = "DropTailQueue"
 *.host*.eth[0].macLayer.expressMacLayer.queue.gate[*].initiallyOpen = true
-*.host*.eth[0].macLayer.expressMacLayer.queue.gate[*].durations = "7ms 1ms"
+*.host*.eth[0].macLayer.expressMacLayer.queue.gate[*].durations = [7ms, 1ms]
 *.host*.eth[0].macLayer.expressMacLayer.queue.gate[0].offset = 0ms
 *.host*.eth[0].macLayer.expressMacLayer.queue.gate[1].offset = 1ms
 *.host*.eth[0].macLayer.expressMacLayer.queue.gate[2].offset = 2ms
