Examples: Disabled eventlog recording by default.

--- a/examples/ethernet/clocksynchronization/omnetpp.ini
+++ b/examples/ethernet/clocksynchronization/omnetpp.ini
@@ -1,6 +1,6 @@
 [General]
 network = ClockSynchronizationExampleNetwork
-record-eventlog = true
+#record-eventlog = true
 description = "Using periodic gating mechanism with or without local clocks and clock synchronization"
 
 # disable legacy Ethernet
