--- a/examples/ethernet/invehicle/omnetpp.ini
+++ b/examples/ethernet/invehicle/omnetpp.ini
@@ -1,6 +1,6 @@
 [General]
 network = InVehicleNetworkExample
-record-eventlog = true
+#record-eventlog = true
 
 *.streamReservationConfigurator.gateCycleDuration = 20ms
 *.streamReservationConfigurator.configuration = \
